# VidentiUI

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  Parse.cpp  Parse.h  README.md  VidentiUI.cpp  VidentiUI.h
pollers/glfw/: VidentiGLFWPoller.cpp  VidentiGLFWPoller.h
renderers/angle/: VidentiAngleRenderer.cpp  VidentiAngleRenderer.h
src/: Parse.cpp  Parse.h  VidentiMath.h  VidentiParse.cpp  VidentiParse.h  VidentiPoller.h  VidentiRenderer.cpp  VidentiRenderer.h  VidentiUI.cpp  VidentiUI.h
tests/resources/: end.lua  parseTest.json  play.lua  quit.lua  start.lua  update.lua
tests/src/: Tests.cpp  Tests.h  main.cpp  main.h
